--- a/css/style.css
+++ b/css/style.css
@@ -1,66 +1,86 @@
-/* grand styles*/
-
-.main_grid {
-    display: grid;
-    grid-template-columns: 50vw 50vw;
-    margin-top: 3vw;
-}
-
-.box1 {
-    grid-column-start: 1;
-    grid-column-end: 1;
-    grid-row-start: 1;
-}
-
-.box2 {
-    grid-column-start: 2;
-    grid-row-start: 1;
-    grid-row-end: 2;
-}
-
-#ierarchy {
+    /* grand styles*/
+    
+    .main_grid {
+        display: grid;
+        grid-template-columns: 50vw 50vw;
+        margin-top: 3vw;
+    }
+    
+    .box1 {
+        grid-column-start: 1;
+        grid-column-end: 1;
+        grid-row-start: 1;
+    }
+    
+    .box2 {
+        grid-column-start: 2;
+        grid-row-start: 1;
+        grid-row-end: 2;
+    }
+    /*#ierarchy {
     width: 50vw;
     height: 95vh;
-}
-
-#map {
-    width: 50vw;
-    height: 95vh;
-}
-
-
-/* styles of ierarchy are below */
-
-.node circle {
-    fill: #999;
-}
-
-.node text {
-    font: 10px sans-serif;
-}
-
-.node--internal circle {
-    fill: #555;
-}
-
-.node--internal text {
-    text-shadow: 0 1px 0 #fff, 0 -1px 0 #fff, 1px 0 0 #fff, -1px 0 0 #fff;
-}
-
-.link {
-    fill: none;
-    stroke: #555;
-    stroke-opacity: 0.4;
-    stroke-width: 1.5px;
-}
-
-form {
-    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-    position: absolute;
-    left: 10px;
-    top: 10px;
-}
-
-label {
-    display: block;
-}
+} */
+    
+    #map {
+        width: 50vw;
+        height: 95vh;
+        position: relative;
+        display: block !important;
+    }
+    
+    #map .tooltip {
+        position: absolute;
+        z-index: 999;
+        pointer-events: none;
+    }
+    
+    .path_line:hover {
+        stroke: red !important;
+        stroke-width: 10 !important;
+        opacity: 1 !important;
+    }
+    /* styles of ierarchy are below */
+    
+    .node circle {
+        fill: #999;
+    }
+    
+    .node text {
+        font: 10px sans-serif;
+    }
+    /*.node text:hover {
+        font: 14px sans-serif;
+        color: red;
+    } */
+    
+    .node--internal circle {
+        fill: #555;
+    }
+    
+    .node--internal text {
+        text-shadow: 0 1px 0 #fff, 0 -1px 0 #fff, 1px 0 0 #fff, -1px 0 0 #fff;
+    }
+    
+    .node--internal text:hover {
+        font: 14px sans-serif;
+        color: red;
+    }
+    
+    .link {
+        fill: none;
+        stroke: #555;
+        stroke-opacity: 0.4;
+        stroke-width: 1.5px;
+    }
+    
+    form {
+        font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+        position: absolute;
+        left: 10px;
+        top: 10px;
+    }
+    
+    label {
+        display: block;
+    }
