--- a/css/style.css
+++ b/css/style.css
@@ -43,7 +43,9 @@
     
     .main_grid {
         display: grid;
+        grid: auto;
         grid-template-columns: 50vw 50vw;
+        grid-template-rows: repeat(5, 200px);
         margin-top: 3vw;
     }
     
@@ -51,12 +53,24 @@
         grid-column-start: 1;
         grid-column-end: 1;
         grid-row-start: 1;
+        grid-row-end: 6;
     }
     
     .box2 {
         grid-column-start: 2;
         grid-row-start: 1;
-        grid-row-end: 2;
+        grid-row-end: 5;
+        align-content: center;
+    }
+    
+    .box3 {
+        grid-column-start: 2;
+        grid-row-start: 5;
+        grid-row-end: 5;
+    }
+    
+    #ierarchy {
+        height: 100%;
     }
     /*#ierarchy {
     width: 50vw;
@@ -64,10 +78,11 @@
 } */
     
     #map {
-        width: 50vw;
-        height: 95vh;
+        /*width: 50vw; */
+        height: 100%;
         position: relative;
         display: block !important;
+        align-self: center;
     }
     
     #map .tooltip {
