--- a/css/style.css
+++ b/css/style.css
@@ -63,6 +63,10 @@
         align-content: center;
     }
     
+    .text-explainer {
+        pointer-events: none;
+    }
+    
     .box3 {
         grid-column-start: 2;
         grid-row-start: 5;
