--- a/css/style.css
+++ b/css/style.css
@@ -40,39 +40,12 @@
     src: url("../fonts/PROXIMA-NOVA-A-SEMIBOLD.OTF") format("opentype")
 }
 
-@media (min-width: 992px) and (max-width: 1279px) {
+@media (max-width: 1279px) and (min-width: 480px) {
     .main_grid {
-        display: block !important;
+        display: none !important;
     }
     #map {
-        width: 99vw;
-    }
-    #main-header {
-        font: 30px "CHARTERC-bold";
-        text-align: center;
-    }
-}
-
-@media (max-width: 991px) and (min-width: 480px) {
-    .main_grid {
-        display: block !important;
-    }
-    #map {
-        width: 99vw;
-    }
-    #main-header {
-        font: 30px "CHARTERC-bold";
-        text-align: center;
-    }
-}
-
-@media (max-width: 479px) {
-    .main_grid {
-        display: block !important;
-        width: 99vw;
-    }
-    #map {
-        width: 99vw !important;
+        display: none !important;
     }
     #main-header {
         font: 30px "CHARTERC-bold" !important;
@@ -83,33 +56,111 @@
         margin-right: 12.5vw !important;
     }
     .usual_text_block {
-        display: block;
-        height: fit-content;
-        margin-left: 25vw;
-        margin-right: 25vw;
-        font: 24px "proxima-medium";
-        color: #555;
+        margin-left: 12.5vw !important;
+        margin-right: 12.5vw !important;
+        font: 14px "proxima-medium" !important;
     }
+    #mobile_ierarchy {
+        display: block !important;
+    }
+    #mobile_map {
+        display: block !important;
+    }
+    #mobile-explainer {
+        display: block !important;
+    }
+    .semi-header {
+        font: 20px "proxima-bold" !important;
+        margin-left: 12.5vw !important;
+        margin-right: 12.5vw !important;
+    }
+    #district-selector-mobile {
+        display: block !important;
+        width: 80vw !important;
+        width: 60vw !important;
+    }
+    #selectors-mobile {
+        display: block !important;
+    }
+}
+
+@media (max-width: 479px) {
+    .main_grid {
+        display: none !important;
+    }
+    #main-header {
+        font: 30px "CHARTERC-bold" !important;
+    }
+    #lead {
+        display: none !important;
+    }
+    .usual_text_block {
+        margin-left: 12.5vw !important;
+        margin-right: 12.5vw !important;
+        font: 14px "proxima-medium" !important;
+    }
+    #mobile_ierarchy {
+        display: block !important;
+    }
+    #mobile_map {
+        display: block !important;
+    }
+    #lead_mobile {
+        display: block !important;
+        font: 18px "proxima-semi" !important;
+        margin-left: 12.5vw !important;
+        margin-right: 12.5vw !important;
+    }
+    #mobile-explainer {
+        display: block !important;
+    }
+    .semi-header {
+        font: 20px "proxima-bold" !important;
+        margin-left: 12.5vw !important;
+        margin-right: 12.5vw !important;
+    }
+    #district-selector-mobile {
+        display: block !important;
+        width: 80vw !important;
+    }
+    #selectors-mobile {
+        display: block !important;
+    }
+}
+
+#pic-background {
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    margin-bottom: 3vh;
 }
 
 #main-header {
     font: 50px "CHARTERC-bold";
     text-align: center;
+    position: absolute;
+    vertical-align: middle;
+    color: #FFFFFF;
+    margin-top: 20%;
+    width: 100%;
 }
 
 #lead {
+    margin-top: 5%;
     font: 24px "proxima-semi";
-    color: black;
+    color: rgb(255, 255, 255);
     margin-left: 25vw;
     margin-right: 25vw;
     height: fit-content;
     margin-bottom: 5vh;
     margin-top: 5vh;
+    position: absolute;
 }
 
 .semi-header {
     color: #000;
-    font: 24px "proxima-semi";
+    font: 28px "proxima-bold";
     margin-left: 25vw;
     margin-right: 25vw;
     margin-bottom: 3vh;
@@ -126,13 +177,12 @@
 }
 
 #selectors {
-    margin-top: 3vh;
-    width: 20vw;
+    margin-top: 1vh;
+    margin-bottom: 1vh;
 }
 
 #district_selector {
-    width: 20vw;
-    margin-left: 10vw;
+    width: 80%;
     height: 3vh;
     font: 12px "proxima-medium";
 }
@@ -345,4 +395,51 @@ path {
 
 .text-explainer {
     pointer-events: none;
+}
+
+#mobile_ierarchy {
+    display: none;
+    margin-top: 3vh;
+}
+
+#mobile_map {
+    display: none;
+    margin-top: 3vh;
+}
+
+#lead_mobile {
+    display: none;
+    margin-top: 5%;
+    font: 24px "proxima-semi";
+    color: black;
+    margin-left: 25vw;
+    margin-right: 25vw;
+    height: fit-content;
+    margin-bottom: 5vh;
+    margin-top: 5vh;
+}
+
+#mobile-explainer {
+    display: none;
+    margin-left: 12.5vw;
+    margin-right: 12.5vw;
+    font: 12px "proxima-medium";
+    color: red;
+    margin-top: 3vh;
+}
+
+#district-selector-mobile {
+    display: none;
+    width: 80%;
+    height: 3vh;
+    font: 12px "proxima-medium";
+    align-self: center;
+    margin-left: 12.5vw;
+}
+
+#selectors-mobile {
+    display: none;
+    margin-top: 1vh;
+    margin-bottom: 1vh;
+    align-self: center;
 }
