--- a/css/style.css
+++ b/css/style.css
@@ -137,25 +137,27 @@
 }
 
 #main-header {
-    font: 50px "CHARTERC-bold";
+    font: 60px "CHARTERC-bold";
     text-align: center;
     position: absolute;
     vertical-align: middle;
     color: #FFFFFF;
     margin-top: 20%;
     width: 100%;
+    letter-spacing: 2pt;
 }
 
 #lead {
     margin-top: 5%;
-    font: 24px "proxima-semi";
+    font: 30px "proxima-semi";
     color: rgb(255, 255, 255);
-    margin-left: 25vw;
-    margin-right: 25vw;
+    margin-left: 12.5vw;
+    margin-right: 12.5vw;
     height: fit-content;
     margin-bottom: 5vh;
     margin-top: 5vh;
     position: absolute;
+    letter-spacing: 1pt;
 }
 
 .semi-header {
