--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,10 @@
     }
     */
 
+body {
+    padding-bottom: 20px;
+}
+
 @font-face {
     font-family: "CHARTERC";
     src: url("../fonts/CHARTERC.OTF") format("opentype")
