--- a/css/style.css
+++ b/css/style.css
@@ -17,6 +17,7 @@
 
 body {
     padding-bottom: 20px;
+    overflow-x: hidden;
 }
 
 @font-face {
@@ -51,7 +52,7 @@ body {
     #map {
         display: none !important;
     }
-    #main-header {
+    #main-header h1 {
         font: 30px "CHARTERC-bold" !important;
     }
     #lead {
@@ -86,13 +87,34 @@ body {
     #selectors-mobile {
         display: block !important;
     }
+    #main-logo {
+        width: 20% !important;
+    }
+}
+
+@media (max-width: 1024px) and (min-width: 769px) {
+    #fb {
+        width: 3vw !important;
+    }
+    #tw {
+        width: 3vw !important;
+    }
+}
+
+@media (max-width: 768px) and (min-width: 479px) {
+    #fb {
+        width: 3vw !important;
+    }
+    #tw {
+        width: 3vw !important;
+    }
 }
 
 @media (max-width: 479px) {
     .main_grid {
         display: none !important;
     }
-    #main-header {
+    #main-header h1 {
         font: 30px "CHARTERC-bold" !important;
     }
     #lead {
@@ -130,38 +152,98 @@ body {
     #selectors-mobile {
         display: block !important;
     }
+    #main-logo {
+        width: 50% !important;
+    }
+    #fb {
+        width: 10vw !important;
+    }
+    #tw {
+        width: 10vw !important;
+    }
 }
 
-#pic-background {
-    width: 100%;
-    height: 100%;
-    top: 0;
-    left: 0;
-    margin-bottom: 3vh;
+article {
+    margin-top: 5vh;
+}
+
+#main-logo {
+    position: absolute;
+    margin-left: 3vw;
+    margin-top: 3vh;
+    width: 15vw;
+}
+
+#socio-icons {
+    margin-left: 3vw;
+    margin-top: 7vh;
+}
+
+#tw {
+    font-family: 'Roboto Mono', monospace;
+    width: 3vw;
+    margin-left: 0.5vw;
+}
+
+#fb {
+    font-family: 'Roboto Mono', monospace;
+    width: 3vw;
+}
+
+.icon-wrapper {
+    font-family: 'Roboto Mono', monospace;
+    display: flex;
+    -webkit-box-pack: start;
+    justify-content: flex-start;
+}
+
+.header-wrapper {
+    font-family: 'Roboto Mono', monospace;
+    width: 90%;
+    margin: 10px auto 50px auto;
+    -webkit-box-align: center;
+    align-items: center;
+    position: absolute;
 }
 
 #main-header {
-    font: 60px "CHARTERC-bold";
-    text-align: center;
-    position: absolute;
-    vertical-align: middle;
-    color: #FFFFFF;
-    margin-top: 20%;
-    width: 100%;
-    letter-spacing: 2pt;
+    height: 100vh;
+    width: calc(100% + 2em);
+    margin-left: -1em;
+    display: flex;
+    background-image: url('https://texty.github.io/project_russian_war_structure/pic/cover.png');
+    background-size: cover;
+    overflow-x: hidden;
 }
 
-#lead {
-    margin-top: 5%;
-    font: 30px "proxima-semi";
-    color: rgb(255, 255, 255);
-    margin-left: 12.5vw;
-    margin-right: 12.5vw;
-    height: fit-content;
-    margin-bottom: 5vh;
-    margin-top: 5vh;
+#socio-icons {
+    font-family: 'Roboto Mono', monospace;
+    display: flex;
+    -webkit-box-pack: start;
+    justify-content: flex-start;
     position: absolute;
-    letter-spacing: 1pt;
+}
+
+.title-wrapper {
+    max-width: 80%;
+    margin: auto !important;
+}
+
+h1.title {
+    color: white;
+    font-size: calc(30px + 1.5vw);
+    font-weight: 800;
+    letter-spacing: 5px;
+    text-align: center;
+    text-transform: uppercase;
+    margin-bottom: 1em !important;
+}
+
+.title-wrapper h3 {
+    color: white;
+    text-transform: none;
+    text-align: center;
+    font-size: calc(18px + 0.7vw);
 }
 
 .semi-header {
@@ -210,7 +292,7 @@ body {
 .main_grid {
     display: grid;
     grid-template-columns: 50vw 50vw;
-    grid-template-rows: repeat(5, 200px);
+    grid-template-rows: repeat(10, 200px);
     margin-top: 3vw;
 }
 
@@ -413,18 +495,6 @@ path {
     margin-top: 3vh;
 }
 
-#lead_mobile {
-    display: none;
-    margin-top: 5%;
-    font: 24px "proxima-semi";
-    color: black;
-    margin-left: 25vw;
-    margin-right: 25vw;
-    height: fit-content;
-    margin-bottom: 5vh;
-    margin-top: 5vh;
-}
-
 #mobile-explainer {
     display: none;
     margin-left: 12.5vw;
@@ -448,4 +518,75 @@ path {
     margin-top: 1vh;
     margin-bottom: 1vh;
     align-self: center;
+}
+
+#created_texty {
+    font-family: 'Noto Sans', sans-serif;
+    color: #33302e;
+    line-height: 1.6;
+    letter-spacing: 1px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    justify-items: center;
+    align-content: center;
+    margin: 4em 15% 4em 15%;
+}
+
+.share-btn {
+    font-family: 'Noto Sans', sans-serif;
+    letter-spacing: 1px;
+    text-align: center;
+    line-height: 1.6;
+}
+
+.fab fa-facebook-f {
+    letter-spacing: 1px;
+    text-align: center;
+    -webkit-font-smoothing: antialiased;
+    display: inline-block;
+    font-style: normal;
+    font-variant: normal;
+    text-rendering: auto;
+    font-family: "Font Awesome 5 Brands";
+    box-sizing: content-box;
+    margin: 0.5em;
+    cursor: pointer;
+    width: 1em;
+    height: 1em;
+    border: 1px solid #616161;
+    color: #a6a6a6;
+    border-radius: 50%;
+    padding: 0.5em;
+    font-size: 2.0em;
+    line-height: 1;
+    transition: all 0.5s;
+}
+
+.fab fa-twitter {
+    letter-spacing: 1px;
+    text-align: center;
+    -webkit-font-smoothing: antialiased;
+    display: inline-block;
+    font-style: normal;
+    font-variant: normal;
+    text-rendering: auto;
+    font-family: "Font Awesome 5 Brands";
+    box-sizing: content-box;
+    margin: 0.5em;
+    cursor: pointer;
+    width: 1em;
+    height: 1em;
+    border: 1px solid #616161;
+    color: #a6a6a6;
+    border-radius: 50%;
+    padding: 0.5em;
+    font-size: 2.0em;
+    line-height: 1;
+    transition: all 0.5s;
+}
+
+#end-logo {
+    width: 30vw;
 }
