--- a/css/style.css
+++ b/css/style.css
@@ -90,6 +90,13 @@ body {
     #main-logo {
         width: 20% !important;
     }
+    .donate-us {
+        align-items: center !important;
+        width: 80% !important;
+    }
+    body {
+        overflow-x: hidden !important;
+    }
 }
 
 @media (max-width: 1024px) and (min-width: 769px) {
@@ -99,6 +106,9 @@ body {
     #tw {
         width: 3vw !important;
     }
+    body {
+        overflow-x: hidden !important;
+    }
 }
 
 @media (max-width: 768px) and (min-width: 479px) {
@@ -107,6 +117,9 @@ body {
     }
     #tw {
         width: 3vw !important;
+    }
+    body {
+        overflow-x: hidden !important;
     }
 }
 
@@ -160,6 +173,13 @@ body {
     }
     #tw {
         width: 10vw !important;
+    }
+    .donate-us p {
+        align-items: center !important;
+        margin-left: 5vw !important;
+    }
+    body {
+        overflow-x: hidden !important;
     }
 }
 
